# ffmpeglibs

./: build.gradle.kts  proguard-rules.pro
src/androidTest/java/org/dwmedia/ffmpeglibs/: ExampleInstrumentedTest.kt
src/main/cJSON/: scratch.sh  wslscrach.bat  wslscratch.sh
src/main/cpp/: CMakeLists.txt  UsingBlock.h  ffmpeginc.h  ffmpeglibs.cpp  ndktools.cpp  ndktools.h  report2.h  run.c  stringformat.h
src/main/fdk-aac/: scratch.sh  wslscratch.sh
src/main/ffmpeg/: pkgconfig.sh  scratch.sh  wslscratch.sh
src/main/java/org/dwmedia/ffmpeglibs/: NativeLib.kt
src/main/libopus/: scratch.sh  wslscratch.sh
src/main/libsvtav1/: scratch.sh  scratcharm.sh  scratcharm64.sh  scratchx64.sh  wslscratch.sh
src/main/libvpx/: scratch.sh  wslscratch.sh
src/main/libx264/: scratch.sh  wslscratch.sh
src/main/libx265/: scratch.sh  wslscratch.sh
src/main/vvenc/: scratch.sh  wslscratch.sh
src/test/java/org/dwmedia/ffmpeglibs/: ExampleUnitTest.kt
